--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "@babel/node": "^7.8.4",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.8.4"
   }
 }
