--- a/package.json
+++ b/package.json
@@ -2,17 +2,44 @@
   "name": "wetube",
   "version": "1.0.0",
   "description": "Cloning Youtube",
-  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev:server": "nodemon",
+    "dev:assets": "webpack"
   },
   "author": "KeunSung",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "@babel/node": "^7.8.4",
-    "express": "^4.17.1"
+    "bcrypt": "^5.0.1",
+    "connect-mongo": "^4.6.0",
+    "cross-fetch": "^3.1.5",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.6.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "pug": "^3.0.2"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ironsoft/wetube-reloaded.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ironsoft/wetube-reloaded/issues"
+  },
+  "homepage": "https://github.com/ironsoft/wetube-reloaded#readme",
   "devDependencies": {
-    "@babel/preset-env": "^7.8.4"
+    "@babel/core": "^7.18.9",
+    "@babel/node": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "mini-css-extract-plugin": "^2.6.1",
+    "nodemon": "^2.0.19",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
