--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ffmpeg/core": "^0.11.0",
     "@ffmpeg/ffmpeg": "^0.11.6",
+    "aws-sdk": "^2.895.0",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "cross-fetch": "^3.1.5",
@@ -24,7 +25,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.1",
     "pug": "^3.0.2",
     "regenerator-runtime": "^0.13.10"
   },
